[gd_scene load_steps=3 format=3 uid="uid://6w2idgs5cqkk"]

[ext_resource type="Script" path="res://ui/terrainTileDetails.gd" id="1_cm7nf"]
[ext_resource type="Texture2D" uid="uid://mqwphkaytfal" path="res://textures/terrain/coast.jpg" id="2_o3x1u"]

[node name="TerrainTileDetails" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 350.0
offset_bottom = 461.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cm7nf")

[node name="TerrainTypeImage" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 233)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 233.0
grow_horizontal = 2
texture = ExtResource("2_o3x1u")
expand_mode = 1

[node name="TerrainTypeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 251.0
offset_right = 77.0
offset_bottom = 274.0
text = "Terrain:"

[node name="FoodLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 277.0
offset_right = 59.0
offset_bottom = 300.0
theme_override_colors/font_color = Color(0.488581, 0.59513, 0, 1)
text = "Food:"

[node name="ProductionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 302.0
offset_right = 106.0
offset_bottom = 325.0
theme_override_colors/font_color = Color(0.803922, 0.392157, 0.231373, 1)
text = "Production:"

[node name="ResourceContainer" type="PanelContainer" parent="."]
layout_direction = 2
layout_mode = 0
offset_left = 17.0
offset_top = 331.0
offset_right = 333.0
offset_bottom = 441.0

[node name="ResourcesList" type="ItemList" parent="ResourceContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
allow_search = false
max_columns = 4
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2i(64, 64)
